# xmlang

./: .gitignore  CMakeLists.txt  CMakePresets.json  Program.lmx  README.md  configure.py  hello_world.xml  program.kubo
cmake/static_analyzers/: cppcheck.cmake
examples/: 00 - hello_world.xml  00 - numbers.xml  01 - hello_world.xml  05 - hello_world.xml  05 - variable_declaration.xml  10 - return_value.xml
xmlang/: CMakeLists.txt
xmlang/include/xmlang/: CMakeLists.txt  Compiler.hpp  Lexer.hpp  Parser.hpp
xmlang/include/xmlang/arch/: LMXCompiler.hpp
xmlang/include/xmlang/codegen/: Assembler.hpp  Compiler.hpp
xmlang/source/: CMakeLists.txt  Compiler.cpp  Lexer.cpp  Main.cpp  Parser.cpp
xmlang/source/arch/: CMakeLists.txt  LMXCompiler.cpp
xmlang/source/codegen/: Assembler.cpp  CMakeLists.txt  Compiler.cpp
xmlc/: CMakeLists.txt
xmlc/include/xmlc/: CMakeLists.txt  Lexer.hpp  Parser.hpp
xmlc/include/xmlc/codegen/: Assembler.hpp
xmlc/source/: CMakeLists.txt  Lexer.cpp  Main.cpp  Parser.cpp
xmlc/source/codegen/: Assembler.cpp  CMakeLists.txt  Compiler.cpp
